style(container): prevent overflow-y

--- a/src/components/layout/container.css
+++ b/src/components/layout/container.css
@@ -9,6 +9,7 @@
   padding-bottom: 114px;
   position: relative;
   overflow-x: clip;
+  overflow-y: hidden;
 }
 .container:has(.service-item){
   padding-bottom: 0px;
